[tool.poetry]
name = "concierge"
version = "0.1.0"
description = ""
authors = ["Franz Pletz <fpletz@fnordicwalking.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
anyio = "^3.6.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
concierge = "concierge.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
