[tool.poetry]
name = "lockd"
version = "0.1.0"
description = ""
authors = ["Franz Pletz <fpletz@fnordicwalking.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.14.1"
Pillow = "^10"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
mock = "^5"

[tool.poetry.scripts]
lockd = "lockd.lockd:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
